# bootstrap.c-web

./: .travis.yml  README.md  cookiecutter.json
.github/workflows/: tests.yml
{{cookiecutter.project_name|lower}}/: .gitignore  Makefile.am  README.md  configure.ac
{{cookiecutter.project_name|lower}}/m4/: args.m4  libwslay.m4
{{cookiecutter.project_name|lower}}/src/: Makefile.am  arg.c  event.c  event.h  http.c  websocket.c  {{cookiecutter.project_name|lower}}.8  {{cookiecutter.project_name|lower}}.c  {{cookiecutter.project_name|lower}}.h
{{cookiecutter.project_name|lower}}/web/: Gruntfile.js  Makefile.am  bower.json  nginx.conf  package.json
{{cookiecutter.project_name|lower}}/web/app/: index.html
{{cookiecutter.project_name|lower}}/web/app/components/: Welcome.jsx  main.jsx
{{cookiecutter.project_name|lower}}/web/app/scripts/: app.js
{{cookiecutter.project_name|lower}}/web/app/scripts/controllers/: main.js
{{cookiecutter.project_name|lower}}/web/app/scripts/directives/: main.js
{{cookiecutter.project_name|lower}}/web/app/scripts/services/: main.js
{{cookiecutter.project_name|lower}}/web/app/styles/: main.less
